--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
   },
   "keywords": [
     "ecosystem:cordova",
-    "html"
+    "html",
+    "e621"
   ],
   "author": "HttpAnimation",
   "license": "Apache-2.0",
