--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
   "keywords": [
     "ecosystem:cordova",
     "html",
-    "e621"
+    "e621",
+    "css"
   ],
   "author": "HttpAnimation",
   "license": "Apache-2.0",
