updates echo in the test command

--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "description": "A sample Apache Cordova application that responds to the deviceready event.",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"I have no idea how to make a test so none sorry mate UwU\" && exit 1"
   },
   "keywords": [
     "ecosystem:cordova",
