updates the license

--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
     "js"
   ],
   "author": "HttpAnimation",
-  "license": "Apache-2.0",
+  "license": "GPL-3.0-only",
   "devDependencies": {
     "cordova-ios": "^7.0.1"
   },
